--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ width: 35%;
 padding: 24px 0;
 }
 body{
-font-family: 'Inter', sans-serif;
+font-family: 'Anuphan', sans-serif;
 }
 .estudante-imagem{
 width: 120px;
